--- a/public/assets/css/new-slider.css
+++ b/public/assets/css/new-slider.css
@@ -1,73 +1,292 @@
-.new-slider-container { padding-left:24px; position:relative; z-index:5; overflow:hidden; }
-.new-slider-container.none-slider {padding-right:24px;}
-.main-container .new-slider-container.none-slider { padding-left: 10px; padding-right: 10px; margin-left: -10px; margin-right: -10px; }
-.new-slider-container.none-slider .swiper-wrapper { flex-wrap:wrap; gap:10px;}
-.new-slider-container.none-slider .new-slider .new-slider-item { width:100%; margin-right:0;}
-.new-slider-container.none-slider .new-slider .swiper-slide { width:calc(50% - 5px); }
-.new-slider {  }
-.new-slider-title { font-family: Roboto-bold; font-size: 16px; line-height: 19px; color: #fff; }
-.new-slider .swiper { padding:20px 0; overflow:visible;}
-.new-slider .swiper-slide {width:auto;margin-right: 24px;}
+.new-slider-container {
+    padding-left: 24px;
+    position: relative;
+    z-index: 5;
+    overflow: hidden;
+}
 
+.new-slider-container.none-slider {
+    padding-right: 24px;
+}
 
-    .new-slider-item {width:135px;cursor:pointer;position:relative;transition:.4s;-webkit-transition:.4s;-moz-transition:.4s;-ms-transition:.4s;-o-transition:.4s;}
-    .new-slider-item .img-holder { overflow:hidden; border-radius: 6px; -webkit-border-radius: 6px; -moz-border-radius: 6px; -ms-border-radius: 6px; -o-border-radius: 6px; }
-    .new-slider-container.small .new-slider-item { width:183px;}
-    .new-slider-hover { opacity: 0; visibility: hidden;display: flex; flex-direction: column; justify-content: flex-end;  position:absolute; top:0; left:0; width:100%; height:100%; padding:10px; background: linear-gradient(180deg, rgba(0, 0, 0, 0) 50%, rgba(0, 0, 0, .4) 74%, #000000 100%); z-index: 5; transition:.3s; -webkit-transition:.3s; -moz-transition:.3s; -ms-transition:.3s; -o-transition:.3s; border-radius: 6px; -webkit-border-radius: 6px; -moz-border-radius: 6px; -ms-border-radius: 6px; -o-border-radius: 6px;}
-    .new-slider-hover-dot { width:21px; height:21px; background:url(../images/hover-dot.png) no-repeat 0px 0px; position:absolute; top:10px; right:10px; }
-    .new-slider-hover-add-list { width:21px; height:21px; background:url(../images/hover-plus.png) no-repeat 0px 0px; position:absolute; top:36px; right:10px; }
-    .new-slider-hover-play { width:31px; height:30px; background:url(../images/hover-play.png) no-repeat 0px 0px; background-size:cover; position:absolute; top:50%; left:50%; transform:translate(-50%, -50%); -webkit-transform:translate(-50%, -50%) ; -moz-transform:translate(-50%, -50%) ; -ms-transform:translate(-50%, -50%) ; -o-transform:translate(-50%, -50%) ; }
-    .new-slider-hover-title { font-size:15px; line-height: 18px; font-family:Roboto-medium; color: #fff; }
-    .new-slider-hover-info { display:flex; align-items: center;  }
-    .new-slider-hover-info i { display:flex; align-items: center; font-size:14px; line-height: 16px; color: #fff; white-space: nowrap;}
-    .new-slider-hover-info i:after { content:''; display:block; width:3px; height:3px; margin:0 3px; background-color: #fff; border-radius: 50%; -webkit-border-radius: 50%; -moz-border-radius: 50%; -ms-border-radius: 50%; -o-border-radius: 50%; }
-    .new-slider-hover-info i:last-child:after{ display: none;}
+.main-container .new-slider-container.none-slider {
+    padding-left: 10px;
+    padding-right: 10px;
+    margin-left: -10px;
+    margin-right: -10px;
+}
 
-    .new-slider .swiper-button-next, .new-slider .swiper-button-prev { display:none;}
-    
-    .new-slider .new-slider-progress { width:80%; height:3px; position:absolute; left:10%; bottom:-7px; background: rgba(209, 209, 209, 0.7); border-radius: 6px; }
-    .new-slider .new-slider-progress span { display:block; height:100%; background-color:#A30000;}
+.new-slider-container.none-slider .swiper-wrapper {
+    flex-wrap: wrap;
+    gap: 10px;
+}
 
+.new-slider-container.none-slider .new-slider .new-slider-item {
+    width: 100%;
+    margin-right: 0;
+}
+
+.new-slider-container.none-slider .new-slider .swiper-slide {
+    width: calc(50% - 5px);
+}
+
+.new-slider {}
+
+.new-slider-title {
+    font-family: Roboto-bold;
+    font-size: 16px;
+    line-height: 19px;
+    color: #fff;
+}
+
+.new-slider .swiper {
+    padding: 20px 0;
+    overflow: visible;
+}
+
+.new-slider .swiper-slide {
+    width: auto;
+    margin-right: 24px;
+}
+
+.new-slider-item {
+    width: 135px;
+    cursor: pointer;
+    position: relative;
+    transition: .4s;
+    -webkit-transition: .4s;
+    -moz-transition: .4s;
+    -ms-transition: .4s;
+    -o-transition: .4s;
+}
+
+.new-slider-item .img-holder {
+    overflow: hidden;
+    border-radius: 6px;
+    -webkit-border-radius: 6px;
+    -moz-border-radius: 6px;
+    -ms-border-radius: 6px;
+    -o-border-radius: 6px;
+}
+
+.new-slider-container.small .new-slider-item {
+    width: 183px;
+}
+
+.new-slider-hover {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    padding: 10px;
+    background: linear-gradient(180deg, rgba(0, 0, 0, 0) 50%, rgba(0, 0, 0, .4) 74%, #000000 100%);
+    z-index: 5;
+    transition: .3s;
+    -webkit-transition: .3s;
+    -moz-transition: .3s;
+    -ms-transition: .3s;
+    -o-transition: .3s;
+    border-radius: 6px;
+    -webkit-border-radius: 6px;
+    -moz-border-radius: 6px;
+    -ms-border-radius: 6px;
+    -o-border-radius: 6px;
+}
+
+.new-slider-hover-dot {
+    width: 21px;
+    height: 21px;
+    background: url(../images/hover-dot.png) no-repeat 0px 0px;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+}
+
+.new-slider-hover-add-list {
+    width: 21px;
+    height: 21px;
+    background: url(../images/hover-plus.png) no-repeat 0px 0px;
+    position: absolute;
+    top: 36px;
+    right: 10px;
+}
+
+.new-slider-hover-play {
+    width: 31px;
+    height: 30px;
+    background: url(../images/hover-play.png) no-repeat 0px 0px;
+    background-size: cover;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
+}
+
+.new-slider-hover-title {
+    font-size: 15px;
+    line-height: 18px;
+    font-family: Roboto-medium;
+    color: #fff;
+}
+
+.new-slider-hover-info {
+    display: flex;
+    align-items: center;
+}
+
+.new-slider-hover-info i {
+    display: flex;
+    align-items: center;
+    font-size: 14px;
+    line-height: 16px;
+    color: #fff;
+    white-space: nowrap;
+}
+
+.new-slider-hover-info i:after {
+    content: '';
+    display: block;
+    width: 3px;
+    height: 3px;
+    margin: 0 3px;
+    background-color: #fff;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+}
+
+.new-slider-hover-info i:last-child:after {
+    display: none;
+}
+
+.new-slider .swiper-button-next,
+.new-slider .swiper-button-prev {
+    display: none;
+}
+
+.new-slider .new-slider-progress {
+    width: 80%;
+    height: 3px;
+    position: absolute;
+    left: 10%;
+    bottom: -7px;
+    background: rgba(209, 209, 209, 0.7);
+    border-radius: 6px;
+}
+
+.new-slider .new-slider-progress span {
+    display: block;
+    height: 100%;
+    background-color: #A30000;
+}
 
 @media (min-width:767px) {
-    .new-slider-container { padding-left:54px; }
-    .new-slider-container.none-slider {padding-right:54px; }
-    .new-slider-container.none-slider .swiper-wrapper { gap:24px;}
-    .new-slider-container.none-slider .new-slider .swiper-slide { width:calc(33.33% - 16px); }
-    .new-slider-title { font-size: 26px; line-height: 30px; }
-    .new-slider .new-slider-item {width:195px;}
-    .new-slider-container.small .new-slider-item { width:240px;}
-
-    .swiper-slide:hover .new-slider-item {  transform:scale(1.1); -webkit-transform:scale(1.1); -moz-transform:scale(1.1); -ms-transform:scale(1.1); -o-transform:scale(1.1); }
-    .swiper-slide:hover .img-holder { outline: 1px solid #DADADA; }
-    .swiper-slide:hover .new-slider-hover { opacity: 1; visibility: visible; }
-
-    .new-slider-hover-play { width:46px; height:45px; }
-    
-
-    .new-slider .swiper-button-next, .new-slider .swiper-button-prev { display:block; opacity: 0; visibility: hidden; width:60px; height:100%; position:absolute; top:0; background:url(../images/new-slider-right-arrow.png) no-repeat center center; cursor: pointer; z-index:2; transition:.2s; -webkit-transition:.2s; -moz-transition:.2s; -ms-transition:.2s; -o-transition:.2s; }
-    .new-slider .swiper-button-next { right:0px;  }
-    .new-slider .swiper-button-prev { left:0px; transform:rotate(180deg); -webkit-transform:rotate(180deg); -moz-transform:rotate(180deg); -ms-transform:rotate(180deg); -o-transform:rotate(180deg); }
-    .new-slider:hover .swiper-button-next, .new-slider:hover .swiper-button-prev { opacity: 1; visibility: visible;}
-
+    .new-slider-container {
+        padding-left: 54px;
+    }
+    .new-slider-container.none-slider {
+        padding-right: 54px;
+    }
+    .new-slider-container.none-slider .swiper-wrapper {
+        gap: 24px;
+    }
+    .new-slider-container.none-slider .new-slider .swiper-slide {
+        width: calc(33.33% - 16px);
+    }
+    .new-slider-title {
+        font-size: 26px;
+        line-height: 30px;
+    }
+    .new-slider .new-slider-item {
+        width: 195px;
+    }
+    .new-slider-container.small .new-slider-item {
+        width: 240px;
+    }
+    .swiper-slide:hover .new-slider-item {
+        transform: scale(1.1);
+        -webkit-transform: scale(1.1);
+        -moz-transform: scale(1.1);
+        -ms-transform: scale(1.1);
+        -o-transform: scale(1.1);
+    }
+    .swiper-slide:hover .img-holder {
+        outline: 1px solid #DADADA;
+    }
+    .swiper-slide .new-slider-hover {
+        opacity: 1;
+        visibility: visible;
+    }
+    .new-slider-hover-play {
+        width: 46px;
+        height: 45px;
+    }
+    .new-slider .swiper-button-next,
+    .new-slider .swiper-button-prev {
+        display: block;
+        opacity: 0;
+        visibility: hidden;
+        width: 60px;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        background: url(../images/new-slider-right-arrow.png) no-repeat center center;
+        cursor: pointer;
+        z-index: 2;
+        transition: .2s;
+        -webkit-transition: .2s;
+        -moz-transition: .2s;
+        -ms-transition: .2s;
+        -o-transition: .2s;
+    }
+    .new-slider .swiper-button-next {
+        right: 0px;
+    }
+    .new-slider .swiper-button-prev {
+        left: 0px;
+        transform: rotate(180deg);
+        -webkit-transform: rotate(180deg);
+        -moz-transform: rotate(180deg);
+        -ms-transform: rotate(180deg);
+        -o-transform: rotate(180deg);
+    }
+    .new-slider:hover .swiper-button-next,
+    .new-slider:hover .swiper-button-prev {
+        opacity: 1;
+        visibility: visible;
+    }
 }
 
 @media (min-width:992px) {
-    .new-slider-container.none-slider .new-slider .swiper-slide { width:calc(25% - 18px); }
+    .new-slider-container.none-slider .new-slider .swiper-slide {
+        width: calc(25% - 18px);
+    }
 }
 
 @media (min-width:1200px) {
-    .new-slider-container.none-slider .new-slider .swiper-slide { width:calc(20% - 20px); }
+    .new-slider-container.none-slider .new-slider .swiper-slide {
+        width: calc(20% - 20px);
+    }
 }
 
 @media (min-width:1440px) {
-    .new-slider-container.none-slider .new-slider .swiper-slide { width:195px; }
+    .new-slider-container.none-slider .new-slider .swiper-slide {
+        width: 195px;
+    }
 }
 
-
-@media screen and (prefers-color-scheme: light) {    
-
-    body.light-mode  .new-slider-title {
-      color: #15182A;
+@media screen and (prefers-color-scheme: light) {
+    body.light-mode .new-slider-title {
+        color: #15182A;
     }
 }
